--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,9 +4,9 @@
     },
     "Translate": {
         "1": "Home",
-        "2": "Feature",
-        "3": "Pricing",
-        "4": "Blog",
+        "2": "Shop",
+        "3": "About",
+        "4": "Teams",
         "5": "Popular products",
         "6": " Injera",
         "7": "Dabo",
