--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -4,9 +4,9 @@
     },
     "Translate": {
         "1": "ዋና ገፅ",
-        "2": "ባህሪ",
-        "3":  "የዋጋ አሰጣጥ",
-        "4": "ብሎግ",
+        "2": "ገበያ",
+        "3":  "ስለ እኛ",
+        "4": "ቡድን",
         "5": "ታዋቂ ምርቶች",
         "6": "እንጀራ",
         "7": "ዳቦ",
