--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -11,7 +11,8 @@
         "6": "እንጀራ",
         "7": "ዳቦ",
         "8": "ጠላ / ጠጅ",
-        "9": "ወደ ቅርጫት ጨምር"
+        "9": "ወደ ቅርጫት ጨምር",
         "10":"ጋጋሪያን የእንጀራ ጋጋሪዎች ህብረት ነው። ድርጅታችን በሀገር ውስጥ እንዲሁም ከሀገር ውጭ እንጀራ ያቀርባል። የጋጋሪያን እንጀራ ሀገር ውስጥ ካለን የሽያጭ ማዕከል መግዛት ይችላሉ። ወይም በቀላሉ በድህረ ገፃችን ገብተው ቢያዙን ያሉበት ቦታ እናደርሳለን።በእናት እጅ የተዘጋጀ ጥራት ያለውን እንጀራ እናቀርባለን።አሁን ላይ በአዲስ አበባ እንዲሁም አሜሪካ ባሉ ስቶሮች ውስጥ ያገኙናል።"
+       ,"11" :""
     }
 }
