--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,6 @@
         "8": "Tela / Tej",
         "9": "ADD TO CART",
         "10": "Gagarian is a united bakers company. The company sells both locally and outside Ethiopia . You can get Gagarian Injera from our local store or you can easily order in our site and get it delivered where you are. We promise to deliver quality Injera right from the hands of a mother.Currently, we are available in Addis Ababa and stores in U.S.A"
+        ,"11":"From The Hands Of A Mother"
     }
 }
